# constraintControllerLite

./: CMakeLists.txt  README.md  package.xml
cmake/: constraintControllerLiteConfig.cmake.in
code/: ccl_helper.cpp  constraintControllerLite.cpp  constraintControllerLiteRevision.h.in  mtsConstraintAbsoluteJointLimits.cpp  mtsConstraintFixOrientation.cpp  mtsConstraintFollowPositionTraj.cpp  mtsConstraintJointVelLimits.cpp  mtsConstraintStayOnAxis.cpp
include/constraintControllerLite/: constraintControllerLite.h  mtsConstraintAbsoluteJointLimits.h  mtsConstraintBase.h  mtsConstraintFixOrientation.h  mtsConstraintFollowPositionTraj.h  mtsConstraintJointVelLimits.h  mtsConstraintStayOnAxis.h
ros/: CMakeLists.txt  mts_ros_crtk_ccl_bridge.cpp  package.xml
ros/include/constraintControllerLite/: mts_ros_crtk_ccl_bridge.h
